# pyscf-cli

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  README_ja.md  XYZ_H2O_opt.xyz  XYZ_H2O_relax.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: COURSE_ja.md  TEACHING_ja.md
example/: colab_quickstart.ipynb
example/XYZ/: SDF_C6H6_benzene_CID_241.xyz  SDF_H2O_CIF_962.xyz  SDF_Uric_Acid_1175.xyz  SDF_beta-D-glucopyranose_CID_64689.xyz  SDF_formamide_CID_713.xyz  XYZ_12-C6H4Cl2-finish_6-31g.xyz  XYZ_12-C6H4Cl2-finish_ccsdt.xyz  XYZ_12-C6H4Cl2.xyz  XYZ_13-C6H4Cl2-finish_6-31g.xyz  XYZ_13-C6H4Cl2.xyz  XYZ_135TNT.xyz  XYZ_14-C6H4Cl2-finish_6-31g.xyz  XYZ_14-C6H4Cl2.xyz  XYZ_2-Naphthol.xyz  XYZ_246TNT.xyz  XYZ_AT-finish_v1.xyz  XYZ_AT-finish_v2.xyz  XYZ_Acetone_CID_180.xyz  XYZ_B.xyz  XYZ_Be.xyz  XYZ_C.xyz  XYZ_C2H2.xyz  XYZ_C2H4.xyz  XYZ_C2H6.xyz  XYZ_C2H6S2_CID_12232.xyz  XYZ_C3H7NO_CID_6228.xyz  XYZ_C6H12O6_D-Glucose_5793.xyz  XYZ_C6H5CH3.xyz  XYZ_CH4.xyz  XYZ_CH4_memo.xyz  XYZ_CO.xyz  XYZ_CO2.xyz  XYZ_CON2H4_urea_1176.sdf.xyz  XYZ_Ca.xyz  XYZ_F.xyz  XYZ_GC-finish_v1.xyz  XYZ_GC-finish_v2.xyz  XYZ_GC-finish_v3.xyz  XYZ_GC-finish_v4.xyz  XYZ_GC-finish_v5.xyz  (+24 more)
example/example_all/: be.xyz  benzene.xyz  f.xyz  he.xyz  li.xyz  my_first_pyscf.py  na.xyz  ne.xyz  o.xyz  o2.xyz  oh.xyz
legacy/: calc_pyscf.py  calc_pyscf_dos.py  calc_pyscf_relax.py  calc_pyscf_thermo.py  calc_pyscf_vib.py  calc_pyscf_vib_movie.py  calc_pyscf_wf.py
src/pyscf_cli/: __init__.py  __main__.py  convert.py  core.py  dos.py  dryrun.py  energy.py  examples.py  info.py  main.py  orbitals.py  output.py  relax.py  thermo.py  vib.py  vibmovie.py
tests/: conftest.py  test_core.py  test_course_features.py  test_occ_control.py  test_regression.py  test_review_fixes.py  test_smoke.py
(+9 files in other folders)
