[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyscf-cli"
version = "0.1.0"
description = "Educational command-line interface to PySCF: run quantum chemistry calculations from a single XYZ file"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Yasuhide Mochizuki", email = "mochizuki@rs.tus.ac.jp" },
]
keywords = [
    "quantum-chemistry",
    "pyscf",
    "education",
    "cli",
    "computational-chemistry",
    "dft",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Education",
]
dependencies = [
    "pyscf>=2.3",
    "numpy",
    "matplotlib",
    "geometric",
]

[project.optional-dependencies]
vesta-colors = ["pymatgen"]
dev = ["pytest", "ruff"]

[project.scripts]
pyscf-cli = "pyscf_cli.main:main"

[project.urls]
Homepage = "https://github.com/ahntaeyoung1212/pyscf-cli"
Issues = "https://github.com/ahntaeyoung1212/pyscf-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pyscf_cli"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
